--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="JS-APP">
   <meta name="author" content="Jeremy Arimado">
 
-  <link rel="stylesheet" href="css/style.css?v=1.0">
+  <link rel="stylesheet" href="css/style.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,7 +19,7 @@
 <body>
 
   <div id="wrap">
-  	
+
   </div>
 
   <script src="js/script.js"></script>
